<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Last_five_weights">LAST FIVE WEIGHTS</string>
    <string name="Last_five_heights">LAST FIVE HEIGHTS</string>
    <string name="see_all">See All</string>
    <string name="edit">Edit</string>

    <string name="app_name">opensrp-growth-monitoring</string>
    <string name="action_settings">Settings</string>
    <string name="label_zeir">ID</string>
    <string name="age">Age</string>

    <string name="edit_growth_data">Edit Growth Data</string>
    <string name="record_growth_with_nl">Record\nGrowth</string>
    <string name="record_growth">Record Growth</string>
    <string name="record_growth_notification">"Don\'t forget to record child\'s growth."</string>
    <string name="record_weight">Record Weight</string>
    <string name="record_height">Record Height</string>
    <string name="weight_for_age">Weight-for-Age %1$s</string>
    <string name="height_for_age">Height-for-Age %1$s</string>
    <string name="weight_for_height">Weight-for-Height %1$s</string>
    <string name="previous_weights">PREVIOUS WEIGHTS</string>
    <string name="previous_heights">PREVIOUS HEIGHTS</string>
    <string name="previous_weight_heights">PREVIOUS WEIGHTS/HEIGHTS</string>

    <string name="months">Months</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="girls">Girls</string>
    <string name="boys">Boys</string>
    <string name="btn_layout_weight">2</string>

    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="done">Complete</string>
    <string name="z_score"> Z-Score</string>

    <string name="date_recorded">Date Recorded %1$s</string>
    <string name="change_date_recorded">Change Date Recorded</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="service_date">Service Date</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="edit_height">Edit Height</string>
    <string name="edit_date">Edit Date</string>
    <string name="delete_record">Delete Weight</string>
    <string name="growth_taken_today">Growth Taken Today</string>
    <string name="growth_taken_earlier">Growth Taken Earlier</string>
    <string name="catchment_area">Catchment Area</string>
    <string name="user_image">User Image</string>
    <string name="weight_is_required">The patient weight cannot be empty.</string>
    <string name="height_is_required">Child height should not be less than 0cm and not above 100 cms.</string>
    <string name="loading_chart">Loading Chart…</string>

</resources>