<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shape"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/edit_layout_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/child_profile_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/child_profilepic"
                    android:layout_width="@dimen/client_profile_pic_dialog_width"
                    android:layout_height="@dimen/client_profile_pic_dialog_height"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/child_boy_infant" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/child_name"
                        style="@style/CustomFontTextViewStyle.ClientList.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="Child Name"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_zeir_id"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="EIR"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/child_age"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="@string/age"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp" />
                    </LinearLayout>

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/pmtct_status"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="pmtct_status"
                        android:textColor="@color/client_list_grey"
                        android:textSize="22sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/client_list_header_dark_grey" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/record_weight"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/edit_weight"
                android:textColor="@color/text_black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp">

                <EditText
                    android:id="@+id/edit_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:inputType="number|numberDecimal"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/weight_value_unit_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/light_grey"
                    android:textSize="40dp" />
            </LinearLayout>

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/record_height"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/edit_height"
                android:textColor="@color/text_black"
                android:textSize="25sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/edit_height_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingEnd="10dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edit_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:inputType="number|numberDecimal"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/height_value_unit_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cm"
                    android:textColor="@color/light_grey"
                    android:textSize="40dp" />
            </LinearLayout>

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/service_date"
                style="@style/CustomFontTextViewStyle.ClientList.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/service_date"
                android:textColor="@color/client_list_grey"
                android:textSize="22sp" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/edit_date_textview"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/edit_date"
                android:textColor="@color/text_black"
                android:textSize="25sp" />

            <DatePicker
                android:id="@+id/earlier_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone" />

            <com.vijay.jsonwizard.customviews.NumericDatePicker
                android:id="@+id/earlier_date_picker_numeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/weight_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/delete_growth_bg"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/delete_record"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/record_weight_red_bg_stk"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/client_list_header_dark_grey" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="10dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/record_growth_earlier_bg"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/client_list_grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/record_growth_today_bg"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>