<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/growth_chart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/growth_chart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/growth_chart_height"
            android:layout_margin="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/client_list_header_dark_grey"
            />
    </LinearLayout>
    <!-- Weight table section -->
    <LinearLayout
        android:id="@+id/growth_dialog_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <ScrollView
            android:id="@+id/growth_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/growth_table_header"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="start"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/previous_weights"
                        android:textColor="@color/black"
                        android:textSize="@dimen/record_weight_tv_text_size" />

                    <ImageButton
                        android:id="@+id/scroll_button"
                        android:layout_width="@dimen/scroll_btn_dimen"
                        android:layout_height="@dimen/scroll_btn_dimen"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:background="@null"
                        android:padding="5dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_icon_collapse"
                        android:visibility="gone" />
                </RelativeLayout>

                <TableLayout
                    android:id="@+id/growth_table"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp"
                    android:stretchColumns="2">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/column_one_metric"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="start|center_vertical"
                            android:minWidth="@dimen/weight_table_column_min_width"
                            android:paddingStart="0dp"
                            android:text="@string/age"
                            android:textColor="@color/client_list_grey"
                            android:textSize="@dimen/record_weight_tv_text_size"
                            android:textStyle="bold" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/metric_label"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="start|center_vertical"
                            android:minWidth="@dimen/weight_table_column_min_width"
                            android:paddingStart="0dp"
                            android:text="@string/weight"
                            android:textColor="@color/client_list_grey"
                            android:textSize="@dimen/record_weight_tv_text_size"
                            android:textStyle="bold" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/column_three_metric"
                            style="@style/CustomFontTextViewStyle.ClientList.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="start|center_vertical"
                            android:minWidth="@dimen/weight_table_column_min_width"
                            android:paddingStart="0dp"
                            android:text="@string/z_score"
                            android:textColor="@color/client_list_grey"
                            android:textSize="@dimen/record_weight_tv_text_size"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>